# hello-codex

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  app.py  instruction.md  pyproject.toml  requirements.txt  seed_dummy_data.py
.github/: copilot-instructions.md
app/: __init__.py  extensions.py  forms.py  models.py
app/auth/: decorators.py  routes.py
app/core/: services.py  validators.py
app/templates/: base.html  dashboard.html  people_list.html  person_form.html  project_form.html  timeentry_form.html
app/templates/auth/: login.html  register.html  request_password_reset.html  reset_password.html
app/views/: dashboard.py  people.py  projects.py  timesheet.py
app_flask/: __init__.py  config.py  extensions.py  models.py  routes.py
app_flask/auth/: __init__.py
app_flask/core/: services.py  validators.py
app_flask/templates/: base.html  dashboard.html  projects_list.html  timesheet_list.html
app_flask/templates/auth/: login.html
app_flask/views/: people.py
docs/: PASSWORD_RECOVERY.md  PROJECT_OVERVIEW.md
migrations/versions/: 0ebbddda1ee2_add_country_field_to_person.py  446a562b7c1c_initial_migration.py  4562a9abf997_initial_migration_with_country_field.py
scripts/: add_password_reset_fields.py  create_admin.py  seed_dummy_data.py  setup_alembic.py
tests/: conftest.py  test_dashboard_aggregations.py  test_models.py  test_password_recovery.py  test_people_country.py  test_registration.py  test_routes.py  test_timesheet_routes.py
